Fix text overflow
(cherry picked from commit 0ffe72919b0e60e728765ebdc2dcac7069b0cebb)

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/assets/buttons.scss
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/assets/buttons.scss
@@ -42,6 +42,9 @@
     width:90%;
     float: left;
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space:nowrap
 }
 .left-btn-side {
     width: 5%;
